--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <script src="js/jquery.js"></script>
   
       <script src="js/two.js"></script>
-      <script type="text/javascript">
+   <!--   <script type="text/javascript">
   function audioControl() {
     var playdiv = document.getElementById('playdiv');
     var pausediv = document.getElementById('pausediv');
@@ -19,10 +19,13 @@
     playdiv.style.display = 'block';
     }
   }
-</script>
+</script> -->
     </head>
 
-  <body><audio id="myAudio" autoplay preload="metadata">
+  <body>
+    <script src="//myradiostream.com/embed/sportyfred"></script>
+
+    <!-- <audio id="myAudio" autoplay preload="metadata">
    <source src="http://91.121.178.222:7696/;"></source>
    Unfortunately your browser doesn't support html5 audio streaming, please update your browser.
 </audio>
@@ -34,7 +37,7 @@
    <div id="pausediv" style="display:block">
       Pause
    </div>
-</button>
+</button> -->
      </body>
 </html>
 
