--- a/test.html
+++ b/test.html
@@ -1,6 +1,14 @@
 <!doctype HTML>
 <html>
   <head>
+    <style>
+.center {
+  margin: auto;
+  width: 60%;
+ 
+  padding: 10px;
+}
+</style>
     <script src="js/jquery.js"></script>
   
       <script src="js/two.js"></script>
@@ -23,6 +31,8 @@
     </head>
 
   <body>
+    <div class="center">
+      
     <script src="//myradiostream.com/embed/sportyfred"></script>
 
     <!-- <audio id="myAudio" autoplay preload="metadata">
@@ -37,7 +47,7 @@
    <div id="pausediv" style="display:block">
       Pause
    </div>
-</button> -->
+</button> --></div>
      </body>
 </html>
 
