--- a/test.html
+++ b/test.html
@@ -33,7 +33,8 @@
   <body>
     <div class="center">
       
-    <script src="//myradiostream.com/embed/sportyfred"></script>
+  <!--  <script src="//myradiostream.com/embed/sportyfred"></script> -->
+
 
     <!-- <audio id="myAudio" autoplay preload="metadata">
    <source src="http://91.121.178.222:7696/;"></source>
@@ -47,7 +48,11 @@
    <div id="pausediv" style="display:block">
       Pause
    </div>
-</button> --></div>
+</button> -->
+<audio controls="> 
+ <source src="http://91.121.178.222:7696/;" type="audio/ogg" />
+ <source src="http://91.121.178.222:7696/;" type="audio/mpeg" />
+</audio></div>
      </body>
 </html>
 
