--- a/test.html
+++ b/test.html
@@ -12,6 +12,8 @@
     <script src="js/jquery.js"></script>
   
       <script src="js/two.js"></script>
+      <script>
+      </script>
    <!--   <script type="text/javascript">
   function audioControl() {
     var playdiv = document.getElementById('playdiv');
@@ -49,10 +51,9 @@
       Pause
    </div>
 </button> -->
-<audio controls="> 
- <source src="http://91.121.178.222:7696/;" type="audio/ogg" />
- <source src="http://91.121.178.222:7696/;" type="audio/mpeg" />
-</audio></div>
+<button onclick="load('http://91.121.178.222:7696/;').then(play);">
+
+</div>
      </body>
 </html>
 
