--- a/test.html
+++ b/test.html
@@ -11,10 +11,12 @@
 </style>
     <script src="js/jquery.js"></script>
   
-      <script src="js/two.js"></script>
+    
       <script>
+      
+
       </script>
-   <!--   <script type="text/javascript">
+   <!--  <script src="js/audioloader.js"></script>  <script type="text/javascript">
   function audioControl() {
     var playdiv = document.getElementById('playdiv');
     var pausediv = document.getElementById('pausediv');
@@ -51,8 +53,7 @@
       Pause
    </div>
 </button> -->
-<button onclick="load('http://91.121.178.222:7696/;').then(play);">
-
+<script src="//myradiostream.com/embed/sportyfred"></script>
 </div>
      </body>
 </html>
